[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ntu-easy-llm"
dynamic = ["version"]
description = "Cross-LLM wrapper for ChatGPT, Gemini, Anthropic with API, model listing, and adapter support"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "周暘恩", email = "chouyangen0401@ntu.edu.tw" },
    { name = "Anthony Chou", email = "mi.anthony.chou@gmail.com" },
]
dependencies = [
    "openai>=2.0.0",
    "google-genai>=1.0.0",
    "anthropic>=0.25.0",
    "cryptography>=42.0.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "ntu_easy_llm._version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship the PEP 561 marker so downstream type checkers use our type hints.
ntu_easy_llm = ["py.typed"]

[tool.pytest.ini_options]
# Only collect the real pytest suite; smoke_test.py and the code*.py demos
# are runnable scripts, not pytest modules.
testpaths = ["tests"]
python_files = ["test_*.py"]

[project.optional-dependencies]
# 安裝方式 pip install ntu-easy-llm[dev]
dev = [
    "pytest>=7.0",
    "black>=24.0",
]

[project.scripts]
# 搭配 cli 指令使用 顯示版本
ntu_easy_llm = "ntu_easy_llm.cli:main"
